# advent22

./: .gitignore  LICENSE  advent22.cabal
app/: A01.hs  A02.hs  A03.hs  A04.hs  A05.hs  A06.hs  Main.hs  Parser.hs
