cabal-version:      3.0
name:               advent22
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             jgotoh
maintainer:         18658140+jgotoh@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent22
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:   A01

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: OverloadedStrings
    build-depends:    base ^>=4.16.0.0,
                      megaparsec
    hs-source-dirs:   app
    default-language: GHC2021
